--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
+<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/addons/p5.sound.min.js))"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>
+
+
 </head>
 <body>
 <center>
@@ -17,10 +21,12 @@
     <br>
     <span class="note">NOTE - Get your left hand wrist in front of the webcam to play Peter Pan Song. Get your right hand wrist in front of the webcam to play Harry Potter Theme Song.</span>
   </h3>
-<br><br>
-<h3 class="btn btn-info"id="Song_Name">Song Name</h3>
 <br>
+<h3 class="btn btn-info"id="Song_Name">Song Name</h3>
+
 <h3 id="Song"></h3>
+
+<button onclick="play_music()" class="btn btn-warning play_button">Play</button>
 
 </center>
 
