--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <span class="note">NOTE - Get your left hand wrist in front of the webcam to play Peter Pan Song. Get your right hand wrist in front of the webcam to play Harry Potter Theme Song.</span>
   </h3>
 <br>
-<h3 class="btn btn-info"id="Song_Name">Song Name</h3>
+<h3 class="btn btn-info"id="Song_Name">Song Name: </h3>
 
 <h3 id="Song"></h3>
 
